--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,6 +33,8 @@ body{
 .cartao .minhas-informacoes img{
     border-radius: 50px;
     border: 4px solid #02d08f;
+    width: 96px;
+    height: 96px;
 }
 
 .cartao .minhas-informacoes .nome{
